refiz sessão do blog e coloquei na pagina inicial

--- a/assets/HTML/certificate.html
+++ b/assets/HTML/certificate.html
@@ -16,7 +16,7 @@
     <header class="header__certificate" id="#top">
         <h1 class="certificate__title">Meus Certificados</h1>
     </header>
-    
+
     <main>
         <section id="section5__certificate">
             <div class="certificate">
@@ -116,7 +116,7 @@
                                 estudantes que desejam aprender programação em Java e construir sua experiência em
                                 programação orientada a objetos usando Java.</span>
                             <button onclick="myFunction('moreText5', 'dots5', 'myBtn5')" id="myBtn5">Ler mais</button>
-                            <br>
+                        </p>
                         <p class="description__course_workload"> Carga horária: 90h</p>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                                 e saúde. É uma excelente opção para quem deseja aprimorar suas habilidades no campo da
                                 produção industrial.</span>
                             <button onclick="myFunction('moreText6', 'dots6', 'myBtn6')" id="myBtn6">Ler mais</button>
-                            <br>
+                        </p>
                         <p class="description__course_workload"> Carga horária: 476h</p>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                                 direitos
                                 e prerrogativas para uma carreira no setor de comércio.</span>
                             <button onclick="myFunction('moreText7', 'dots7', 'myBtn7')" id="myBtn7">Ler mais</button>
-                            <br>
+                        </p>
                         <p class="description__course_workload"> Carga horária: 4.440h</p>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                                 de
                                 admissão e demissão de colaboradores.</span>
                             <button onclick="myFunction('moreText8', 'dots8', 'myBtn8')" id="myBtn8">Ler mais</button>
-                            <br>
+                        </p>
                         <p class="description__course_workload"> Carga horária: 476h</p>
                     </div>
                 </div>
@@ -218,7 +218,7 @@
     </footer>
 
     <button onclick="topFunction()" id="myBtnScroll" title="Voltar para o topo"><img class="arrow__up"
-            src="/assets/IMG/arrowUP.svg" alt="Botão para voltar para o topo"></button>
+            src="/assets/IMG/arrow-up.svg" alt="Botão para voltar para o topo"></button>
 
     <script src="/assets/JS/read-more-less-button.js"></script>
     <script src="/assets/JS/button-scroll-top.js"></script>
