Adicionei a seção projetos e fiz uma ultima revisão de identação em todo o projeto

--- a/assets/HTML/certificate.html
+++ b/assets/HTML/certificate.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <section id="section5__certificate">
+        <section id="section4__certificate">
             <div class="certificate">
                 <div class="certificate__box">
                     <iframe class="certificate__pdf"
@@ -74,7 +74,6 @@
                     </div>
                 </div>
 
-
                 <div class="certificate__box">
                     <iframe class="certificate__pdf"
                         src="https://drive.google.com/file/d/1k1ZglJPFQl1-n-XwB0Ei_Gm6mN7RWLYC/preview"
@@ -94,7 +93,6 @@
                         <p class="description__course_workload"> Carga horária: 40h</p>
                     </div>
                 </div>
-
 
                 <div class="certificate__box">
                     <iframe class="certificate__pdf"
@@ -165,13 +163,12 @@
                     </div>
                 </div>
 
-
                 <div class="certificate__box">
                     <iframe class="certificate__pdf"
                         src="https://drive.google.com/file/d/1RZUEhgv1mYtRCecIMXVcoh_HujP_x5Td/preview"
-                        title="Certificado 8"></iframe>
+                        title="Aprendizagem Comercial"></iframe>
                     <div class="description">
-                        <h2>Descrição do Certificado 8</h2>
+                        <h2>Aprendizagem Profissional Comercial</h2>
                         <p id class="lessText8">O curso de Aprendizagem Profis<span id="dots8">...</span><span
                                 id="moreText8" style="display: none;">sional Comercial em Serviços Administrativos do
                                 SENAC prepara
