correção no texto 😅

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <h3 class="project__about_subtitle">Meu Portfolio</h3>
                     <p class="project__about_text">Este é meu portfólio para a Unidade Curricular de
                         Usabilidade, Desenvolvimento Web, Mobile e Jogos. Utilizando HTML, CSS e JavaScript, criei
-                        soluções eficazes e jogos interativos com foco na usabilidade.</p>
+                        soluções eficazes interativos com foco na usabilidade.</p>
                 </div>
 
                 <div class="project__link">
